@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.2 2018/07/28 14:40:52 brook Exp $
+# $NetBSD: Makefile,v 1.3 2019/08/01 01:00:28 brook Exp $
 
-CATEGORIES=	time
+CATEGORIES=	time R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	https://www.rmetrics.org/
 COMMENT=	Chronological and calendar objects
-LICENSE=	gnu-gpl-v2
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	timeDate
-R_PKGVER=	3042.101
+R_PKGVER=	3043.102
 
 USE_LANGUAGES=	# none
 
