@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.1 2018/02/09 16:53:08 minskim Exp $
+$NetBSD: distinfo,v 1.2 2019/08/01 01:00:28 brook Exp $
 
-SHA1 (R/timeDate_3042.101.tar.gz) = bdc27e3822a323e0507399b92e990bb5c1f8101d
-RMD160 (R/timeDate_3042.101.tar.gz) = 1711783c200a69ea330839c511eec70a02f6ada6
-SHA512 (R/timeDate_3042.101.tar.gz) = fd777d246eb2a3bf68f706b7b642ca14ab4eaa98598f4cefcc48cf0b7d7977af5917ad06e14c2c6adc9b0ac93c806e0e36982ef9d7503a759a677ee2bf1f1205
-Size (R/timeDate_3042.101.tar.gz) = 314661 bytes
+SHA1 (R/timeDate_3043.102.tar.gz) = b15cd02792cb48d3e9d5f9c90b03f2611d12550d
+RMD160 (R/timeDate_3043.102.tar.gz) = a07739490726662755999ae202d621f51dc4fd25
+SHA512 (R/timeDate_3043.102.tar.gz) = b67870dcef0d7fc4ea618210412333ec44ff32b2cf93644e77ceadb4302c65e29d9fa2a3955b1b13f8d1f147947530e95640bc79661d41f2c54b4bf00718f114
+Size (R/timeDate_3043.102.tar.gz) = 314656 bytes
